--- a/src/main/webapp/lesson01/quiz10.html
+++ b/src/main/webapp/lesson01/quiz10.html
@@ -2,23 +2,26 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>입사 지원</title>
+<title>사용자 정보 확인</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 <body>
-	<div class="container">
-		<h1>입사 지원</h1>
-		<form method="post" action="/servlet/quiz09">
-			<input type="text" class="confirm-control col-4" id="name" name="name">
-			<br>
-			<p class="mt-3">자기 소개서</p>
-			<textarea class="form-control col-9" name="introduce"></textarea>
-			<br>
-			<button type="submit" class="btn btn-primary btn-block">지원</button>
-		</form>
-	</div>
+	<h1>로그인</h1>
+	<form method="POST" action="/servlet/quiz10">
+		<input type="text" class="form-control col-3" id="userId" name="userId"> 
+		<br>
+		<input type="password" class="form-control col-3" id="pw" name="pw" >
+		<br>
+		<button type="submit" class="form-control btn-info col-1">로그인</button>
+	</form>
+	
+	<script type="text/javascript">
+		$(document).ready(function() {
+			alert("안녕");
+		});	
+	</script>
 </body>
 </html>
